test/integration/bad/new/bad_constrained_type_in_model2.stan
model {
  simplex[2] x;
  print(x);
}
